home-at-sea/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-at-sea-frontend-service
  namespace: home-at-sea
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: home-at-sea-frontend
