home-at-sea/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-at-sea-ingress
  namespace: home-at-sea
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "homeatsea.jakob-lingel.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-at-sea-frontend-service
                port:
                  number: 80
    - host: "www.homeatsea.jakob-lingel.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-at-sea-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - "homeatsea.jakob-lingel.dev"
        - "www.homeatsea.jakob-lingel.dev"
      secretName: home-at-sea-tls
